# huskysay

./: LICENSE  README.md  huskysay.cabal
app/: Main.hs
src/: Defaults.hs  Lib.hs  Parser.hs  Types.hs
test/: Spec.hs
