name:                huskysay
version:             0.1.0.0
synopsis:            Renders text as ascii art (like cowsay, but way cooler and without a cow)
description:         Please see README.md
homepage:            https://github.com/vipo/huskysay#readme
license:             BSD3
license-file:        LICENSE
author:              Viaceslav Pozdniakov
maintainer:          pi@homedir.eu
copyright:           2016 Viaceslav Pozdniakov
category:            Console
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Types
                     , Defaults
                     , Parser
  build-depends:       base >= 4.7 && < 5
                     , split
  default-language:    Haskell2010

executable huskysay
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , huskysay
  default-language:    Haskell2010

test-suite huskysay-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , huskysay
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vipo/huskysay
